# absa

./: .editorconfig  .gitignore  .style.yapf  LICENSE  README.md  README.rst  dev.py  example.py  main.py  process.py  pyproject.toml  run_pipeline.py  setup.sh  source.py  test.txt  train.py
absa/: __init__.py  requisites.py
absa/input/: semeval2016.py  text.py
absa/labels/: default.py
absa/output/: semeval2016.py
absa/preprocess/: _display.py  dep_parse.py  dependency.py  display.py  parse_xml.py  pipeline.py  spell_check.py
absa/review/: __init__.py  review.py  sentence.py
absa/utils/: download.py  dump.py  embedding.py  file.py  logging.py  nlp.py
analysis/: aspect classifier.ipynb  display.ipynb  explore dataset.ipynb  polarity classifier.ipynb
datasets/SemEval2016/: README.md
example/output/: README.rst
input/: README.rst  raw.txt
io/input/: README.rst
notebooks/: aspect classifier.ipynb
playbooks/: Untitled.ipynb  aspect classifier.ipynb  explore.ipynb  polarity classifier.ipynb  standard targets extraction.ipynb  target classifier.ipynb
src/: __init__.py
src/aspect/: classifier.py  labels.py  loader.py  nn.py
src/dgl/: __init__.py  batch.py  classifier.py  dataset.py  tree_lstm.py
src/labels/: labels.py
src/lstm/: stack_lstm.py
src/polarity/: classifier.py  eval.py  gcn.py  loader.py  nn.py
src/preprocess/: __init__.py  dep_parse.py  display.py  pipeline.py  spell_check.py
src/review/: __init__.py  parsed_sentence.py  review.py  (+1 more)
tests/: __init__.py  test_absa.py  test_dep_parsing.py  test_pipeline.py  test_xml_parse.py
(+86 files in other folders)
