[tool.poetry]
name = "absa"
version = "0.1.0"
description = "Pipiline for aspect-based sentiment analysis"
authors = ["davydovdmitry <davydofdmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
sklearn = "^0.0"
networkx = "^2.4"
pandas = "^1.0.3"
tqdm = "^4.45.0"
scipy = "^1.4.1"
gensim = "^3.8.2"
termcolor = "^1.1.0"
Pillow = "^7.1.2"
dgl = "^0.4.3"
frozendict = "^1.2"
aiohttp = "^3.6.2"
aiofiles = "^0.5.0"
stanza = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
pylint = "^2.5.0"
jupyterlab = "^2.1.1"
pygments = "^2.6.1"
jupyter_nbextensions_configurator = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
